fixed vertical align

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 table{
     border: 1;
     width: 100%;
+    height: 100%;
     color:blue
 
 }
@@ -10,7 +11,7 @@ table{
     margin-top: 0%;
     display: flex;
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .columns,input[type="radio"]{
